客户端模板添加隐藏字段token，防止多次递交表单

--- a/web/login.html
+++ b/web/login.html
@@ -8,7 +8,8 @@
 <form action = "login" method = "post">
     用户名：<input type = "text" name = "username">
     密  码：<input type = "password" name = "password">
-    <input type = "submit" value = "登录">
+    <input type="hidden" name="token" value="{{.}}"/><!-- 客户端模板添加隐藏字段token，防止多次递交表单-->
+    <input type = "submit" value = "登录"/>
 </form>
 </body>
 </html>
